resources/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: 'Montserrat', sans-serif;
    text-rendering: optimizeLegibility;
    font-size: 20px;
    font-weight: 300;
    color: rgb(211, 211, 211);
}


.row {
    max-width: 1140px;
    margin: 0 auto;
}

header {
    background-image: linear-gradient(#000000b3, rgba(130, 247, 179, 0.7) 500%), url(img/city.jpg);
    height: 100vh;
    background-position: center;
    background-size: cover;
    background-attachment: fixed;

}



.header-text-box {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 700px;
}

h1 {
    margin: 0;
    color: #fff;
    font-size: 400%;
    font-weight: 100;
    text-transform: uppercase;
}

.btn {
    display: inline-block;
    padding: 10px 30px;
    font-weight: 300;
    text-decoration: none;
    border-radius: 200px;
    transition: color 0.2s,
}

.btn-full {
    background-color: #2ecc71;
    color: #fff;
    margin-right: 15px;
}

.btn-ghost {
    border: 1px solid #2ecc71;
    color: #2ecc71;

}

.btn-ghost:hover,
.btn-full:hover {
    color: #fff;
    background-color: #28b062;
}

.main-nav {
    list-style: none;
}

nav ul {
    position: relative;
    left: 250px;
    float: right;
    margin-right: 200px;
    margin-top: 10px;
    padding-bottom: 5px;
}


.main-nav li {
    display: inline-block;
    margin-right: 30px;
    margin-top: 30px;
    transition: border-bottom 0.2s;
}

.main-nav li a:link,
.main-nav li a:visited {
    text-decoration: none;
    color: white;

}


.main-nav li:hover {
    border-bottom: 1px solid #2ecc71;
}



.diamond-logo {
    position: absolute;
    margin-top: 20px;
    left: 100px;
    top: 10px;
    float: left;
    height: 100px;
    color: #fff;
    font-weight: 300;
    letter-spacing: -4px;
}

/* --------------------------- */
/* SERVICES */
/* --------------------------- */
.services-section {
    background-color: rgb(235, 235, 235);
    color: rgb(66, 66, 66);
}


.services-title {
    text-align: center;
}

.services-heading {
    display: inline-block;
    text-align: center;
    margin-top: 40px;
    margin-right: 40px;
    margin-bottom: 25px;
    padding: 10px 0;
    border-bottom: 2px solid #2ecc71;
    font-size: 200%;
    font-weight: 300;
    letter-spacing: 3px;
}

.social {
    margin-bottom: 8px;
}


.icon-big {
    color: #2ecc71;
    margin-left: 200px;
    font-size: 250%;
    padding-bottom: 25px;
}

.services-section p {
    width: 420px;
    margin-left: 50px;
    line-height: 150%;
    font-size: 82%;
    padding-bottom: 30px;
    
}

/* ---- Testimonials ------*/
/*
.testimonials-heading {
    text-align: center;
    padding: 20px 0 10px 0;
    border-bottom: 2px solid #2ecc71;
    display: inline-block;
    font-size: 140%;
    font-weight: 300;
    position: relative;

}
*/

.testimonials {
    background-image: linear-gradient(#000000b3, rgba(0, 0, 0, 0.411) 500%), url(img/chicago.jpg);
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    overflow: hidden;

}

.testimonials p {
    color: rgb(241, 239, 239);
    font-size: 80%;
    line-height: 145%;
    width: 90%;
    margin-bottom: 15px;
}

.testimonials img{
    border-radius: 50%;
    height: 60px;
    width: auto;
    margin-top: 20px;
}

.testi {
    width: 350px;
}

.testi-name {
    position: relative;
    left: 85px;
    top: -42px;
}

.testimonials h2 {
    color: rgb(236, 236, 236);
    text-align: center;
    margin: 30px 0;
    padding-bottom: 10px;
    border-bottom: 2px solid #2ecc71;
    display: inline-block;
    margin-left: 460px;
}

/* ------------ Payment Plans ----------------*/
.payment-heading {
    position: absolute;
    right: 690px;
    text-align: center;
    margin-top: 30px;
    color: rgb(94, 94, 94);
    text-align: center;
    margin: 30px 0;
    padding-bottom: 10px;
    border-bottom: 2px solid #2ecc71;
    display: inline-block;
    margin-right: 160px;
}

.card {
    margin-top: 150px;
    padding-top: 40px;
    background-color: rgb(253, 252, 252);
    color: #000;
    border-radius: 10px;
    padding-bottom: 30px;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.555);
    width: 30%;

}

.card-information p {
    margin-left: 50px;
    width: 80%;
}

.card-price {
    text-align: center;
}

.payment-btn {
    margin-left: 80px;
    margin-top: 30px;
}

/* ----- ANIMATIONS ------ */
.js--wp-1,
.js--wp-2,
.js--wp-3 {
    opacity: 0;
    animation-duration: 1.2s;
}

.js--wp-4 {
    animation-duration: 1s;
}

.js--wp-1 .animated,
.js--wp-2 .animated,
.js--wp-3 .animated {
    opacity: 1;
}

